--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Navneet Singh"/>
     <meta property="og:description" content="Aspiring QA Engineer"
-    <meta property="og:url" content="https://krishgera.tech"/>
+    <meta property="og:url" content="https://navneetsingh.tech"/>
     <meta property="og:site_name" content="Navneet Singh"/>
         <meta name="twitter:card" content="summary"/>
     <meta name="twitter:description" content="Aspiring QA Engineer"
@@ -284,7 +284,7 @@
         </ul>
 
         <div class="pt-5 pb-4 mobilemenu-fadein">
-          <h5 class="h6 mb-1 c-white">Mail Gera_</h5>
+          <h5 class="h6 mb-1 c-white">Mail Singh</h5>
           <a href="mailto:navneetsingh234@outlook.com" class="c-white d-block">navneetsingh234@outlook.com</a>
         </div>
 
