--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
     <div class="container pt-4 pb-2 d-flex justify-content-between flex-column min-vh-100">
       <div class="grid gcols-2">
         <div>
-          <a href="index.html" class="c-white">Gera_</a>
+          <a href="index.html" class="c-white">Singh</a>
         </div>
         <div class="text-end d-md-none c-white" data-action="togglemenu">
           <span>Close</span>
