--- a/work-del.html
+++ b/work-del.html
@@ -62,7 +62,7 @@
   <div class="container">
     <div class="grid gcols-2 py-4">
       <div>
-        <a href="index.html">Gera_</a>
+        <a href="index.html">Singh</a>
       </div>
       <div class="text-end d-none d-md-block menu">
         <a href="about.html" class="p-2 mx-2 ">About_</a>
@@ -191,7 +191,7 @@
   <div class="container py-4">
     <div class="row gap-4">
       <a href="index.html" class="col-auto">
-        <h5 class="h6 mb-3">Gera_</h5>
+        <h5 class="h6 mb-3">Singh</h5>
         <span>&copy; 2024</span>
       </a>
       <div class="col-auto">
@@ -231,7 +231,7 @@
     <div class="container pt-4 pb-2 d-flex justify-content-between flex-column min-vh-100">
       <div class="grid gcols-2">
         <div>
-          <a href="index.html" class="c-white">Gera_</a>
+          <a href="index.html" class="c-white">Singh</a>
         </div>
         <div class="text-end d-md-none c-white" data-action="togglemenu">
           <span>Close</span>
@@ -251,8 +251,8 @@
         </ul>
 
         <div class="pt-5 pb-4 mobilemenu-fadein">
-          <h5 class="h6 mb-1 c-white">Mail Gera_</h5>
-          <a href="mailto:krishgera@outlook.com" class="c-white d-block">krishgera@outlook.com</a>
+          <h5 class="h6 mb-1 c-white">Mail Singh</h5>
+          <a href="mailto:navneetsingh234@outlook.com" class="c-white d-block">navneetsingh234@outlook.com</a>
         </div>
 
         <div class=" mobilemenu-fadein">
@@ -271,7 +271,7 @@
 
           <div id="awwwards" class="gs-fin d-none d-lg-block" data-delay="1.4" 
   style="position: fixed; z-index: 999; transform: translateY(-50%); top: 50%;  right: 0">
-  <a href="https://krishgera.tech/resume.html" target="_blank">
+  <a href="https://navneetsingh234.tech/resume.html" target="_blank">
     <svg width="53.08" height="171.358">
         <path class="js-color-bg" fill="black" d="M0 0h53.08v171.358H0z"></path>
         <g class="js-color-text" fill="white">
