--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="grid gcols-2 py-4">
       <div>
-        <a href="index.html">Gera_</a>
+        <a href="index.html">Singh</a>
       </div>
       <div class="text-end d-none d-md-block menu">
         <a href="about.html" class="p-2 mx-2 ">About</a>
@@ -178,7 +178,7 @@
     <div class="container pt-4 pb-2 d-flex justify-content-between flex-column min-vh-100">
       <div class="grid gcols-2">
         <div>
-          <a href="index.html" class="c-white">Gera_</a>
+          <a href="index.html" class="c-white">Singh</a>
         </div>
         <div class="text-end d-md-none c-white" data-action="togglemenu">
           <span>Close</span>
