--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div class="row">
       <div class="col-auto col-lg-3 offset-lg-9 ms-auto me-4 me-lg-0 mt-6 gs-fin">
         <p class="mb-n1">Contact me at</p>
-        <a href="mailto:navneetsingh234@outlook.com" target="_blank"class="link">navneetsingh234@outlook.com</a>
+        <a href="mailto:navneet1729@outlook.com" target="_blank"class="link">navneet1729@outlook.com</a>
       </div>
     </div>
   </div>
@@ -285,7 +285,7 @@
 
         <div class="pt-5 pb-4 mobilemenu-fadein">
           <h5 class="h6 mb-1 c-white">Mail Singh</h5>
-          <a href="mailto:navneetsingh234@outlook.com" class="c-white d-block">navneetsingh234@outlook.com</a>
+          <a href="mailto:navneet1729@outlook.com" class="c-white d-block">navneet1729@outlook.com</a>
         </div>
 
         <div class=" mobilemenu-fadein">
