--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
           <h1 class="fs-xl mb-3 ms-n1 gs-lin">All you need<br> to know</h1>
 
           <div class="py-3 py-lg-6 my-6 gs-fin" data-delay="0.5">
-            <a href="mailto:navneetsingh234@outlook.com" class="fs-xl lh-1 d-none d-lg-block">navneetsingh234@outlook.com</a>
-            <a href="mailto:navneetsingh234@outlook.com" class="fs-lg lh-1 d-block d-lg-none">navneetsingh234@outlook.com</a>
+            <a href="mailto:navneet1729@outlook.com" class="fs-xl lh-1 d-none d-lg-block">navneet1729@outlook.com</a>
+            <a href="mailto:navneet1729@outlook.com" class="fs-lg lh-1 d-block d-lg-none">navneet1729@outlook.com</a>
             <a href="tel:+447747146640" class="fs-sm d-block">+447747146640</a>
             <small>I'll get in touch, promise.</small>
           </div>
@@ -159,7 +159,7 @@
 
         <div class="pt-5 pb-4 mobilemenu-fadein">
           <h5 class="h6 mb-1 c-white">Mail Singh</h5>
-          <a href="mailto:navneetsingh234@outlook.com" class="c-white d-block">navneetsingh234@outlook.com</a>
+          <a href="mailto:navneet1729@outlook.com" class="c-white d-block">navneet1729@outlook.com</a>
         </div>
 
         <div class=" mobilemenu-fadein">
