--- a/work-del.html
+++ b/work-del.html
@@ -252,7 +252,7 @@
 
         <div class="pt-5 pb-4 mobilemenu-fadein">
           <h5 class="h6 mb-1 c-white">Mail Singh</h5>
-          <a href="mailto:navneetsingh234@outlook.com" class="c-white d-block">navneetsingh234@outlook.com</a>
+          <a href="mailto:navneet1729@outlook.com" class="c-white d-block">navneet1729@outlook.com</a>
         </div>
 
         <div class=" mobilemenu-fadein">
